--- a/Resources/Styles/Colors.xaml
+++ b/Resources/Styles/Colors.xaml
@@ -91,13 +91,23 @@
     <Color x:Key="Yellow100">#FEF3C7</Color>
     <Color x:Key="Yellow200">#FDE68A</Color>
     <Color x:Key="Yellow300">#FDE047</Color>
+    <Color x:Key="Yellow400">#FACC15</Color>
+    <Color x:Key="Yellow500">#EAB308</Color>
+    <Color x:Key="Yellow600">#CA8A04</Color>
+    <Color x:Key="Yellow700">#A16207</Color>
+    <Color x:Key="Orange50">#FFF7ED</Color>
+    <Color x:Key="Orange100">#FFEDD5</Color>
+    <Color x:Key="Orange200">#FED7AA</Color>
+    <Color x:Key="Orange300">#FDBA74</Color>
     <Color x:Key="Orange400">#FB923C</Color>
     <Color x:Key="Orange500">#F59E0B</Color>
     <Color x:Key="Orange600">#D97706</Color>
-    <Color x:Key="Yellow600">#CA8A04</Color>
+    <Color x:Key="Orange700">#C2410C</Color>
 
     <Color x:Key="Purple50">#F3E8FF</Color>
     <Color x:Key="Purple100">#E9D5FF</Color>
+    <Color x:Key="Purple200">#DDD6FE</Color>
+    <Color x:Key="Purple300">#C4B5FD</Color>
     <Color x:Key="Purple400">#A78BFA</Color>
     <Color x:Key="Purple500">#8B5CF6</Color>
     <Color x:Key="Purple600">#7C3AED</Color>
