--- a/Views/PaginaPanelAdmin.xaml
+++ b/Views/PaginaPanelAdmin.xaml
@@ -484,7 +484,7 @@
                                     <CollectionView.ItemTemplate>
                                         <DataTemplate>
                                             <Border Margin="0,4" Padding="12" Stroke="{StaticResource Gray200Jazer}" StrokeShape="RoundRectangle 8">
-                                                <Grid ColumnDefinitions="4,*,Auto,Auto" ColumnSpacing="8">
+                                                <Grid ColumnDefinitions="4,*,Auto,Auto,Auto" ColumnSpacing="8">
                                                     <BoxView Grid.Column="0" Color="{Binding Prioridad, Converter={StaticResource PriorityToColorConverter}}" VerticalOptions="Fill"/>
                                                     
                                                     <VerticalStackLayout Grid.Column="1" Margin="8,0" Spacing="2">
@@ -508,7 +508,22 @@
                                                               HorizontalOptions="Center" VerticalOptions="Center"/>
                                                     </Border>
                                                     
-                                                    <Border Grid.Column="3" BackgroundColor="{Binding Estado, Converter={StaticResource StatusBackgroundColorConverter}}" StrokeThickness="0" Padding="8,4" VerticalOptions="Center" StrokeShape="RoundRectangle 4">
+                                                    <!-- Botón de eliminar -->
+                                                    <Border Grid.Column="3"
+                                                            BackgroundColor="{StaticResource Red50}"
+                                                            HeightRequest="32" WidthRequest="32" StrokeThickness="0" StrokeShape="RoundRectangle 6"
+                                                            VerticalOptions="Center"
+                                                            ToolTipProperties.Text="Eliminar tarea">
+                                                        <Border.GestureRecognizers>
+                                                            <TapGestureRecognizer Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.EliminarTareaCommand}" CommandParameter="{Binding .}"/>
+                                                        </Border.GestureRecognizers>
+                                                        <Path Data="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" 
+                                                              Stroke="{StaticResource Red500}" StrokeThickness="1.5" 
+                                                              WidthRequest="16" HeightRequest="16" Aspect="Uniform"
+                                                              HorizontalOptions="Center" VerticalOptions="Center"/>
+                                                    </Border>
+                                                    
+                                                    <Border Grid.Column="4" BackgroundColor="{Binding Estado, Converter={StaticResource StatusBackgroundColorConverter}}" StrokeThickness="0" Padding="8,4" VerticalOptions="Center" StrokeShape="RoundRectangle 4">
                                                         <Label Text="{Binding Estado}" TextColor="{Binding Estado, Converter={StaticResource StatusTextColorConverter}}" FontSize="11" FontAttributes="Bold"/>
                                                     </Border>
                                                 </Grid>
@@ -1579,11 +1594,13 @@
                                 <CollectionView.ItemTemplate>
                                     <DataTemplate>
                                         <Border Margin="0,4" Padding="12,10" StrokeShape="RoundRectangle 10"
-                                                Stroke="{StaticResource Gray200Jazer}">
+                                                Stroke="{StaticResource Gray200Jazer}"
+                                                BackgroundColor="White">
                                             <Border.Triggers>
                                                 <DataTrigger TargetType="Border" Binding="{Binding EstaSeleccionada}" Value="True">
                                                     <Setter Property="BackgroundColor" Value="{StaticResource Blue50}"/>
                                                     <Setter Property="Stroke" Value="{StaticResource Blue400}"/>
+                                                    <Setter Property="StrokeThickness" Value="2"/>
                                                 </DataTrigger>
                                             </Border.Triggers>
                                             <Border.GestureRecognizers>
@@ -1595,6 +1612,11 @@
                                                 <!-- Etiqueta visual -->
                                                 <Border Grid.Column="0" BackgroundColor="{Binding ColorHex}" 
                                                         StrokeThickness="0" Padding="10,6" StrokeShape="RoundRectangle 8">
+                                                    <Border.Triggers>
+                                                        <DataTrigger TargetType="Border" Binding="{Binding EstaSeleccionada}" Value="True">
+                                                            <Setter Property="Padding" Value="12,8"/>
+                                                        </DataTrigger>
+                                                    </Border.Triggers>
                                                     <HorizontalStackLayout Spacing="6">
                                                         <Path Data="{Binding Icono, Converter={StaticResource IconNameToPathConverter}}" 
                                                               Stroke="White" StrokeThickness="1.5"
@@ -1606,20 +1628,29 @@
                                                 <!-- Descripción -->
                                                 <Label Grid.Column="1" Text="{Binding Descripcion}" 
                                                        TextColor="{StaticResource Gray500Jazer}" FontSize="12"
-                                                       VerticalOptions="Center" LineBreakMode="TailTruncation"/>
+                                                       VerticalOptions="Center" LineBreakMode="TailTruncation">
+                                                    <Label.Triggers>
+                                                        <DataTrigger TargetType="Label" Binding="{Binding EstaSeleccionada}" Value="True">
+                                                            <Setter Property="TextColor" Value="{StaticResource Blue700}"/>
+                                                            <Setter Property="FontAttributes" Value="Bold"/>
+                                                        </DataTrigger>
+                                                    </Label.Triggers>
+                                                </Label>
                                                 
                                                 <!-- Check -->
-                                                <Border Grid.Column="2" HeightRequest="24" WidthRequest="24" 
-                                                        StrokeShape="RoundRectangle 12" StrokeThickness="2"
+                                                <Border Grid.Column="2" HeightRequest="28" WidthRequest="28" 
+                                                        StrokeShape="RoundRectangle 14" StrokeThickness="2"
                                                         Stroke="{StaticResource Gray300Jazer}" BackgroundColor="Transparent">
                                                     <Border.Triggers>
                                                         <DataTrigger TargetType="Border" Binding="{Binding EstaSeleccionada}" Value="True">
                                                             <Setter Property="BackgroundColor" Value="{StaticResource Green500}"/>
                                                             <Setter Property="Stroke" Value="{StaticResource Green500}"/>
+                                                            <Setter Property="HeightRequest" Value="30"/>
+                                                            <Setter Property="WidthRequest" Value="30"/>
                                                         </DataTrigger>
                                                     </Border.Triggers>
                                                     <Path Data="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z" 
-                                                          Fill="White" WidthRequest="14" HeightRequest="14"
+                                                          Fill="White" WidthRequest="16" HeightRequest="16"
                                                           Aspect="Uniform" HorizontalOptions="Center" VerticalOptions="Center"
                                                           IsVisible="{Binding EstaSeleccionada}"/>
                                                 </Border>
